# KernelSense

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  PERFORMANCE.md  README.md  kernelsense.db  kernelsense.db-journal  memory.md  plan.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/access/: README.md  level_policy.py  state.py
backend/app/api/: README.md  access.py  auth.py  demo.py  dvr.py  health.py  incidents.py  memory.py  processes.py  resources.py  scheduler.py  ws.py
backend/app/core/: README.md  config.py  crypto.py  logging.py  rate_limit.py
backend/app/db/: README.md  database.py
backend/app/db/models/: consent_log.py  prediction.py  process_snapshot.py  resource_metric.py  scheduler_event.py
backend/app/db/repositories/: telemetry.py
backend/app/instrumentation/: README.md  consent.py  sampler.py
backend/app/instrumentation/common/: README.md  base.py  open_files.py  permissions.py  schema.py  services.py  sockets.py
backend/app/instrumentation/linux/: README.md  ebpf_collector.py  psutil_collector.py
backend/app/llm/: README.md  explain_incident.py
backend/app/ml/: incident_engine.py  populate_db.py  train_and_infer.py
backend/app/ml/anomaly/: README.md  (+1 more)
backend/app/tests/: README.md  live_benchmark.py  soak_test.py  test_access_policy.py  test_anomaly.py  test_auth.py  test_backend.py  test_dvr.py  test_instrumentation.py
backend/app/workers/: telemetry_ingest_worker.py
backend/tests/: test_access_policy.py  test_incident_engine.py
(+125 files in other folders)
