[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernelsense"
version = "0.1.0"
description = "AI-augmented real-time operating system observatory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
